# QuranReciter

./: CMakeLists.txt  README.md
include/: concrete_reciter_factories.h  concrete_reciters.h  reciter.h  reciter_factory.h
src/: main.cpp
tests/: reciter_tests.cpp
